--- a/mithril/index.html
+++ b/mithril/index.html
@@ -27,6 +27,12 @@
 (function(){
 "use strict";
 
+    var DoubleBinding = function(source, run){
+        if(!source){console.log("Source is empty, please provide binding source by defining the variable")};
+
+
+    }
+
     /***************   APP   **************************/
     // App module  -- Sets global app variables and settings, does not generate views
     // Define module :
