--- a/index.html
+++ b/index.html
@@ -13,26 +13,42 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style>
+        body {
+            background: lightcoral;
+        }
+        .jumbotron {
+            background: lightslategray;
+            text-align: center;
+        }
+        .jumbotron h1 {
+            margin-bottom: 30px;
+            color: white;
+            font-weight: 200;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
 <body>
 <div class="jumbotron">
     <div class="container">
-        <h2>Javascript Framework Comparison</h2>
-        <p>Select your framework </p>
-        <p><a href="https://github.com/caneruguz/cm-mvc" class="btn btn-info">Github Page for this project</a></p>
+        <h1>Javascript Framework Comparison</h1>
+        <p class="mvc-p"> This page provides implementation of a modular single page application using front end solutions with leading js frameworks.  </p>
+        <p><a href="https://github.com/caneruguz/cm-mvc" class="btn btn-info btn-lg">Github Page for this project</a></p>
     </div>
 </div>
 
 <div class="container">
+    <h2 class="mvc-h2"> Select framework to view applications</h2>
     <div class="row mvc-row">
         <div class="col-sm-4  col-xs-12  mvc-div">
-            <div class="mvc-box bg-success"> <a href="mithril"> Mithril.js </a></div>
+            <div class="mvc-box mvc-done"> <a href="mithril"> Mithril.js </a></div>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
-            <div class="mvc-box "> <a href="#">Can.js </a></div>
+            <div class="mvc-box mvc-done"> <a href="canjs">Can.js </a></div>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
-            <div class="mvc-box "> <a href="#"> Knockout.js </a></div>
+            <div class="mvc-box mvc-notdone"> <a href="knockout"> Knockout.js </a></div>
         </div>
     </div>
 </div> <!-- Close Container  -->
